@@ -1,15 +1,9 @@
 name: Metatag
 type: module
 description: Manage meta tags for all entities.
-# core: 8.x
+core: 8.x
 package: SEO
 dependencies:
   - field
   - token
 configure: entity.metatag_defaults.collection
-
-# Information added by Drupal.org packaging script on 2016-05-14
-version: '8.x-1.0-beta8'
-core: '8.x'
-project: 'metatag'
-datestamp: 1463224448
